<resources>
    <string name="app_name">Scooter Sharing</string>
    <string name="add_button">Add Ride</string>
    <string name="successfully_placed_bike">Successfully placed bike at designated position</string>
    <string name="could_not_find_bike">Could not find the name of the bike. Please try again</string>
    <string name="last_added_text">Last Added: </string>
    <string name="name_text">Name:</string>
    <string name="where_text">Where:</string>
    <string name="start_button">Start Ride</string>
    <string name="info_text">Location: </string>
    <string name="update_button">Update Ride</string>
    <string name="edit_button">Edit Ride</string>
    <string name="back_button">Back</string>
    <string name="list_rides_button">List Rides</string>
</resources>