<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ScooterSharingFragment">

    <!-- Recent added ride -->
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/list_rides_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_rides_button" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <ListView
        android:id="@+id/list_of_rides"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <EditText
        android:id="@+id/test_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>

